Fix: pug overlap

--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -120,7 +120,7 @@ body {
   position: relative;
   height: 490px;
 }
-hr .ml15 .mr15 {
+hr {
   margin-top: 200px;
   border: none;
   height: 1px;
